--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --watch ./ app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/yoonass/node-study/issues"
   },
-  "homepage": "https://github.com/yoonass/node-study#readme"
+  "homepage": "https://github.com/yoonass/node-study#readme",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
